--- a/SharpRepository.Tests.Integration/SharpRepository.Tests.Integration.csproj
+++ b/SharpRepository.Tests.Integration/SharpRepository.Tests.Integration.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Docker.DotNet" Version="3.125.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.0" />
     <PackageReference Include="EntityFramework.SqlServerCompact" Version="6.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
